2007-12-17	Joel Sherrill <joel.sherrill@OARcorp.com>

	* support/include/tmacros.h: Add new helper for POSIX tests.

2007-09-21	Ralf Corsépius <ralf.corsepius@rtems.org>

	* aclocal/version.m4: Bump RTEMS_API to 4.9.
	Bump RTEMS_VERSION to 4.8.99.0.

2007-05-11	Joel Sherrill <joel.sherrill@OARcorp.com>

	* support/include/buffer_test_io.h: Add support for using printk for
	output in tests. This should be followed up by disabling the console
	driver and other support when the tests are using printk.

2007-02-11	Ralf Corsépius <ralf.corsepius@rtems.org>

	* aclocal/check-cpuopts.m4: Check rtems/system.h instead of
	rtems/score/cpuopts.h.

2006-12-02	Ralf Corsépius <ralf.corsepius@rtems.org>

	* configure.ac: New BUG-REPORT address.

2006-10-18	Ralf Corsépius <ralf.corsepius@rtems.org>

	* aclocal/rtems-top.m4: Remove RTEMS_API.
	* aclocal/version.m4: Add RTEMS_API. Bump RTEMS_API to 4.8.

2006-10-17	Ralf Corsépius <ralf.corsepius@rtems.org>

	* aclocal/prog-cxx.m4: Add AC_PROG_CXXCPP.

2006-10-17	Ralf Corsépius <ralf.corsepius@rtems.org>

	* aclocal/version.m4: Bump version to 4.7.99.0.

2006-10-17	Ralf Corsépius <ralf.corsepius@rtems.org>

	* configure.ac: Require autoconf-2.60. Require automake-1.10.

2006-07-09      Thomas Doerfler <Thomas.Doerfler@embedded-brains.de>

	* samples/fileio/system.h: 
	(PR1118) make use of the new confdefs.h mechanisms 
	for the IDE/ATA interface
	
2006-04-18  Joel Sherrill <joel@OARcorp.com>

	* aclocal/version.m4: Updated to rtems-4.6.99.3.

2006-02-01	Joel Sherrill <joel@OARcorp.com>

	PR 855/tests
	* support/include/tmacros.h: Fix typo.

2005-11-22	Ralf Corsepius <ralf.corsepius@rtems.org>

	* aclocal/enable-bare.m4: Remove (Unused).
	* aclocal/env-rtemsbsp.m4, configure.ac: 
	Remove RTEMS_ENABLE_BARE, 
	BARE_CPU_CFLAGS, BARE_CPU_MODEL.

2005-11-22	Ralf Corsepius <ralf.corsepius@rtems.org>

	* automake/compile.am: Remove .coff. Remove .obj.

2005-11-13	Ralf Corsepius <ralf.corsepius@rtems.org>

	* automake/local.am: Remove depend.